--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,9 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+.header__head div, .header__head a {
+  flex: 1;
+}
 .header__head a {
   text-decoration: none;
   color: black;
